# sliding-window-dataset

./: LICENSE  README.md  pyproject.toml
src/sliding_window_dataset/: __init__.py  dataset.py
tests/: test_dataset.py
