[project]
name = "sliding-window-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gijs Smit" }
]
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
