[project]
name = "sliding-window-dataset"
version = "0.1.0"
description = "A PyTorch dataset that iterates over time series data using a sliding window"
readme = "README.md"
authors = [
    { name = "Gijs Smit" }
]
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.3.4",
    "torch>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
